Complite advantages section

--- a/index.html
+++ b/index.html
@@ -97,40 +97,48 @@
           </div>
         </div>
       </section>
-      <section class="section" id="advantages-section">
+      <section class="advantages-section section" id="advantages-section">
         <div class="container">
-          <h2 class="section-title">
+          <h2 class="advantages-title section-title centered">
             Чому люди <span class="accent">обирають нас</span>
           </h2>
-          <ul>
-            <li>
-              <article>
-                <!-- logo -->
-                <p class="advantages-text">
-                  Всі наші косметологи мають вищу медичну освіту та стаж роботи
-                  від 5 років
-                </p>
-              </article>
-            </li>
-            <li>
-              <article>
-                <!-- logo -->
-                <p class="advantages-text">
-                  Використовуємо тільки професійне обладнання та косметику,
-                  перевірену часом
-                </p>
-              </article>
-            </li>
-            <li>
-              <article>
-                <!-- logo -->
-                <p class="advantages-text">
-                  Наша мета - підкреслити переваги та приховати недоліки, а не
-                  переробити
-                </p>
-              </article>
-            </li>
-          </ul>
+          <div class="advantages-container">
+            <ul class="advantages-list">
+              <li class="advantages-item">
+                <article class="advantages-card">
+                  <svg class="advantages-icon" width="48" height="48">
+                    <use href="./images/icons.svg#icon-game"></use>
+                  </svg>
+                  <p class="advantages-text">
+                    Всі наші косметологи мають вищу медичну освіту та стаж
+                    роботи від 5 років
+                  </p>
+                </article>
+              </li>
+              <li class="advantages-item">
+                <article class="advantages-card">
+                  <svg class="advantages-icon" width="48" height="48">
+                    <use href="./images/icons.svg#icon-bottle"></use>
+                  </svg>
+                  <p class="advantages-text">
+                    Використовуємо тільки професійне обладнання та косметику,
+                    перевірену часом
+                  </p>
+                </article>
+              </li>
+              <li class="advantages-item">
+                <article class="advantages-card">
+                  <svg class="advantages-icon" width="48" height="48">
+                    <use href="./images/icons.svg#icon-crown"></use>
+                  </svg>
+                  <p class="advantages-text">
+                    Наша мета - підкреслити переваги та приховати недоліки, а не
+                    переробити
+                  </p>
+                </article>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <section class="section" id="procedures-section">
