Uptade procedure section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="header-link" href="#advantages-section">Чому ми</a>
               </li>
               <li>
-                <a class="header-link" href="#procedures-section">
+                <a class="header-link" href="#procedure-section">
                   Наші процедури
                 </a>
               </li>
@@ -102,67 +102,77 @@
           <h2 class="advantages-title section-title centered">
             Чому люди <span class="accent">обирають нас</span>
           </h2>
-          <div class="advantages-container">
-            <ul class="advantages-list">
-              <li class="advantages-item">
-                <article class="advantages-card">
-                  <svg class="advantages-icon" width="48" height="48">
-                    <use href="./images/icons.svg#icon-game"></use>
-                  </svg>
-                  <p class="advantages-text">
-                    Всі наші косметологи мають вищу медичну освіту та стаж
-                    роботи від 5 років
-                  </p>
-                </article>
-              </li>
-              <li class="advantages-item">
-                <article class="advantages-card">
-                  <svg class="advantages-icon" width="48" height="48">
-                    <use href="./images/icons.svg#icon-bottle"></use>
-                  </svg>
-                  <p class="advantages-text">
-                    Використовуємо тільки професійне обладнання та косметику,
-                    перевірену часом
-                  </p>
-                </article>
-              </li>
-              <li class="advantages-item">
-                <article class="advantages-card">
-                  <svg class="advantages-icon" width="48" height="48">
-                    <use href="./images/icons.svg#icon-crown"></use>
-                  </svg>
-                  <p class="advantages-text">
-                    Наша мета - підкреслити переваги та приховати недоліки, а не
-                    переробити
-                  </p>
-                </article>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
-      <section class="section" id="procedures-section">
-        <div class="container">
-          <h2 class="section-title">
-            Наші <span class="accent">процедури</span>
-          </h2>
-          <ul>
-            <li>
-              <article>
-                <h3 class="procedures-text">Маски для обличчя</h3>
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <article class="advantages-card">
+                <svg class="advantages-icon" width="48" height="48">
+                  <use href="./images/icons.svg#icon-game"></use>
+                </svg>
+                <p class="advantages-text">
+                  Всі наші косметологи мають вищу медичну освіту та стаж роботи
+                  від 5 років
+                </p>
               </article>
             </li>
-            <li>
-              <article>
-                <h3 class="procedures-text">Ін'єкції для обличчя</h3>
+            <li class="advantages-item">
+              <article class="advantages-card">
+                <svg class="advantages-icon" width="48" height="48">
+                  <use href="./images/icons.svg#icon-bottle"></use>
+                </svg>
+                <p class="advantages-text">
+                  Використовуємо тільки професійне обладнання та косметику,
+                  перевірену часом
+                </p>
               </article>
             </li>
-            <li>
-              <article>
-                <h3 class="procedures-text">Очищення обличчя</h3>
+            <li class="advantages-item">
+              <article class="advantages-card">
+                <svg class="advantages-icon" width="48" height="48">
+                  <use href="./images/icons.svg#icon-crown"></use>
+                </svg>
+                <p class="advantages-text">
+                  Наша мета - підкреслити переваги та приховати недоліки, а не
+                  переробити
+                </p>
               </article>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="section" id="procedure-section">
+        <div class="container">
+          <h2 class="procedure-title section-title centered">
+            Наші <span class="accent">процедури</span>
+          </h2>
+          <div class="procedure-container">
+            <button class="carousel-button" type="button">
+              <svg class="carousel-arrow" width="20" height="20">
+                <use href="./images/icons.svg#icon-arrow"></use>
+              </svg>
+            </button>
+            <ul class="procedure-list">
+              <li class="procedure-item">
+                <article class="procedure-card">
+                  <h3 class="procedure-text">Маски для обличчя</h3>
+                </article>
+              </li>
+              <li class="procedure-item">
+                <article class="procedure-card">
+                  <h3 class="procedure-text">Ін'єкції для обличчя</h3>
+                </article>
+              </li>
+              <li class="procedure-item">
+                <article class="procedure-card">
+                  <h3 class="procedure-text">Очищення обличчя</h3>
+                </article>
+              </li>
+            </ul>
+            <button class="carousel-button" type="button">
+              <svg class="carousel-arrow" width="20" height="20">
+                <use href="./images/icons.svg#icon-arrow"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </section>
       <section class="section" id="contact-section">
