Update contact section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="banner-section container">
           <div class="banner-container">
             <span class="hero-subtitle">Косметологічна клініка</span>
-            <h1 class="hero-title decoration" lang="en">beauty zone</h1>
+            <h1 class="hero-title" lang="en">beauty zone</h1>
             <button class="button" type="button">Замовити дзвінок</button>
             <p class="hero-text">
               Запишись та отримай безкоштовну консультацію нашого косметолога
@@ -175,19 +175,28 @@
           </div>
         </div>
       </section>
-      <section class="section" id="contact-section">
+      <section class="contact-section section" id="contact-section">
         <div class="container">
-          <h2 class="section-title">
+          <h2 class="contact-title section-title centered">
             Як нас <span class="accent">знайти</span>
           </h2>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2537.476474136308!2d30.775235599999995!3d50.506700699999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d97de411b701%3A0x48116b28f7f00d94!2z0LLRg9C70LjRhtGPINCi0LDRgNCw0YHQsCDQqNC10LLRh9C10L3QutCwLCA1LCDQkdGA0L7QstCw0YDQuCwg0JrQuNGX0LLRgdGM0LrQsCDQvtCx0LsuLCAwNzQwMA!5e0!3m2!1suk!2sua!4v1704628288033!5m2!1suk!2sua"
-            width="605"
-            height="481"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+          <div class="contact-container">
+            <iframe
+              class="contact-map"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1121.2657798083098!2d30.518782121304056!3d50.44151448419124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2z0LHRg9C70YzQstCw0YAg0KLQsNGA0LDRgdCwINCo0LXQstGH0LXQvdC60LAsIDUsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1706282836276!5m2!1suk!2sua"
+              width="605"
+              height="450"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+            <div class="contact-form">
+              <h3 class="contact-text">
+                Запишіться <span class="decoration">безкоштовно</span> та
+                отримайте подарунок
+              </h3>
+            </div>
+          </div>
         </div>
       </section>
       <footer>
@@ -226,7 +235,7 @@
               <li>
                 <a
                   class="address-link"
-                  href="https://maps.app.goo.gl/M33vKBFgx1aqDMKy9"
+                  href="https://maps.app.goo.gl/W4S9b5ijtWMjAwGu6"
                 >
                   Україна, м. Київ, вул. Тараса Шевченка 5
                 </a>
